# CGF

./: README.md
assignment2/: CMakeLists.txt  cube.cpp  main.cpp
cgf3/: CMakeLists.txt  main.cpp  shader_utils.h
cgf3/shaders/: gouraud.vert  phong.frag  phong.vert
